border changes and province naming

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -5,7 +5,7 @@ PROV3470;Ipsala;;;;;;;;;;;;;
 PROV3471;Iruña;;;;;;;;;;;;;
 PROV3472;Baiona;;;;;;;;;;;;;
 PROV3473;Aberiu;;;;;;;;;;;;;
-PROV3426;Északihatár;;;;;;;;;;;;;
+PROV3426;Tuketerod;;;;;;;;;;;;;
 PROV3427;Gori;;;;;;;;;;;;;
 PROV3428;Tuttul;;;;;;;;;;;;;
 PROV3429;Telavi;;;;;;;;;;;;;
@@ -27,7 +27,7 @@ PROV3442;Darvaza;;;;;;;;;;;;;
 PROV858;Tlaxcallan;;;;;;;;;;;;;
 PROV3425;Altenburg;;;;;;;;;;;;;
 PROV3424;Saletsa;;;;;;;;;;;;;
-PROV3422;Baia Mare;;;;;;;;;;;;;
+PROV3422;Noifolyóvár;;;;;;;;;;;;;
 PROV3421;Presevo;;;;;;;;;;;;;
 PROV3420;Peja;;;;;;;;;;;;;
 PROV3418;Crossen;;;;;;;;;;;;;
@@ -80,7 +80,7 @@ PROV3374;Sabac;;;;;;;;;;;;;
 PROV3373;Filibe;;;;;;;;;;;;;
 PROV3372;Shulinya;;;;;;;;;;;;;
 PROV3371;Panglikalya;;;;;;;;;;;;;
-PROV3370;Fenyovár;;;;;;;;;;;;;
+PROV3370;Citalamentes;;;;;;;;;;;;;
 PROV3369;Firjuza;;;;;;;;;;;;;
 PROV3368;Jaanilidna;;;;;;;;;;;;;
 PROV3367;Petseri;;;;;;;;;;;;;
@@ -113,12 +113,13 @@ PROV3339;Rovaniemi;;;;;;;;;;;;;
 PROV3338;Giron;;;;;;;;;;;;;
 PROV3337;Zarov;;;;;;;;;;;;;
 PROV3336;Lubin;;;;;;;;;;;;;
-PROV3335;Zlin;;;;;;;;;;;;;
-PROV3334;Kutna Hora;;;;;;;;;;;;;
-PROV3333;Pribram;;;;;;;;;;;;;
-PROV3332;Berehowe;;;;;;;;;;;;;
+PROV3335;Márgyavár;;;;;;;;;;;;;
+PROV3334;Kuttenberg;;;;;;;;;;;;;
+PROV3483;Prag;;;;;;;;;;;;;
+PROV3333;Freiberg;;;;;;;;;;;;;
+PROV3332;Beregszász;;;;;;;;;;;;;
 PROV3331;Kikinda;;;;;;;;;;;;;
-PROV3330;Subotica;;;;;;;;;;;;;
+PROV3330;Szabatka;;;;;;;;;;;;;
 PROV3325;Tiraspol;;;;;;;;;;;;;
 PROV3324;Ositemphely;;;;;;;;;;;;;
 PROV3323;Kefelong;;;;;;;;;;;;;
@@ -270,13 +271,96 @@ PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1117;Sanandaj;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
 PROV673;Seliava;;;;;;;;;;;;;
-PROV3286;Steinamanger;;;;;;;;;;;;;
+PROV3286;Szombathely;;;;;;;;;;;;;
 PROV2638;Zabul;;;;;;;;;;;;;
 PROV2643;Hajjiabad;;;;;;;;;;;;;
 PROV3258;Kech;;;;;;;;;;;;;
+PROV613;Soizbuag;;;;;;;;;;;;
+PROV615;Lianz;;;;;;;;;;;;
+PROV617;Szerethely;;;;;;;;;;;;
+PROV622;Linz;;;;;;;;;;;;
+PROV623;Sopron;;;;;;;;;;;;
+PROV624;Kismarton;;;;;;;;;;;;
+PROV627;Karlsbad;;;;;;;;;;;;
+PROV639;Zalaegerszeg;;;;;;;;;;;;
+PROV640;Pécs;;;;;;;;;;;;
+PROV642;Gyor;;;;;;;;;;;;
+PROV643;Fehérvár;;;;;;;;;;;;
+PROV644;Kaposvár;;;;;;;;;;;;
+PROV645;Kunságvár;;;;;;;;;;;;
+PROV646;Miskolc;;;;;;;;;;;;
+PROV648;Debrecen;;;;;;;;;;;;
+PROV649;Szeged;;;;;;;;;;;;
+PROV650;Békéscsaba;;;;;;;;;;;;
+PROV653;Hidegfürdovár;;;;;;;;;;;;
 PROV1210;Faizabad;;;;;;;;;;;;;
 PROV8;Kuala Kelantan;;;;;;;;;;;;;
 PROV10;San Khew Jong;;;;;;;;;;;;;
+PROV769;Postumia;;;;;;;;;;;;
+PROV770;Puola;;;;;;;;;;;;
+PROV771;Szepreg;;;;;;;;;;;;
+PROV773;Lajosvár;;;;;;;;;;;;
+PROV774;Lovagokvár;;;;;;;;;;;;
+PROV775;Varasd;;;;;;;;;;;;
+PROV776;Belovár;;;;;;;;;;;;
+PROV777;Völgyszíve;;;;;;;;;;;;
+PROV778;Tarsata;;;;;;;;;;;;
+PROV779;Mocsárvár;;;;;;;;;;;;
+PROV780;Spálathos;;;;;;;;;;;;
+PROV781;Iadasira;;;;;;;;;;;;
+PROV782;Epídavros;;;;;;;;;;;;
+PROV783;Sarajevo;;;;;;;;;;;;
+PROV785;Fürdorét;;;;;;;;;;;;
+PROV786;Tuzla;;;;;;;;;;;;
+PROV787;Foca;;;;;;;;;;;;
+PROV788;Mostar;;;;;;;;;;;;
+PROV789;Livno;;;;;;;;;;;;
+PROV790;Kitwe;;;;;;;;;;;;
+PROV791;Folyóvízátkelés;;;;;;;;;;;;
+PROV793;Valkóvár;;;;;;;;;;;;
+PROV794;Belgrade;;;;;;;;;;;;
+PROV795;Bor;;;;;;;;;;;;
+PROV796;Kragujevac;;;;;;;;;;;;
+PROV797;Uzice;;;;;;;;;;;;
+PROV798;Navissa;;;;;;;;;;;;
+PROV799;Leskovac;;;;;;;;;;;;
+PROV800;Ulcinj;;;;;;;;;;;;
+PROV801;Tahiti;;;;;;;;;;;;
+PROV802;Pristina;;;;;;;;;;;;
+PROV803;Prizren;;;;;;;;;;;;
+PROV804;Novi;;;;;;;;;;;;
+PROV633;Pozsony;;;;;;;;;;;;;
+PROV634;Trencsén;;;;;;;;;;;;;
+PROV635;Élyegety;;;;;;;;;;;;;
+PROV636;Kiválasztvár;;;;;;;;;;;;;
+PROV647;Nagyvárad;;;;;;;;;;;;;
+PROV651;Nagykároly;;;;;;;;;;;;;
+PROV652;Temesvár;;;;;;;;;;;;;
+PROV654;Favázasvár;;;;;;;;;;;;;
+PROV655;Gyulafehérvár;;;;;;;;;;;;;
+PROV656;Gézafehérvár;;;;;;;;;;;;;
+PROV659;Koronavár;;;;;;;;;;;;;
+PROV660;Sepsiszentgyörgy;;;;;;;;;;;;;
+PROV661;Árpádvár;;;;;;;;;;;;;
+PROV701;Gniezno;;;;;;;;;;;;;
+PROV767;Celeina;;;;;;;;;;;;;
+PROV768;Labacia;;;;;;;;;;;;;
+PROV772;Sziszek;;;;;;;;;;;;;
+PROV792;Mélymocsarak;;;;;;;;;;;;;
+PROV951;Folyóvár;;;;;;;;;;;;;
+PROV953;Varjakvár;;;;;;;;;;;;;
+PROV980;Lugansk;;;;;;;;;;;;;
+PROV993;Vytegra;;;;;;;;;;;;;
+PROV1023;Kostroma;;;;;;;;;;;;;
+PROV1038;Novy Uzen;;;;;;;;;;;;;
+PROV1046;Nizhnechirskaya;;;;;;;;;;;;;
+PROV1090;Tiflis;;;;;;;;;;;;;
+PROV1092;Kutais;;;;;;;;;;;;;
+PROV1095;Sukhum;;;;;;;;;;;;;
+PROV2533;Vasarhely;;;;;;;;;;;;;
+PROV2538;Újvidék;;;;;;;;;;;;;
+PROV2577;Debar;;;;;;;;;;;;;
+PROV2584;Fehérfol;;;;;;;;;;;;;
 PROV3275;Kapoea;;;;;;;;;;;;;
 PROV3276;Látogatóld;;;;;;;;;;;;;
 PROV3277;Hlucin;;;;;;;;;;;;;
@@ -284,12 +368,12 @@ PROV3278;Manifa;;;;;;;;;;;;;
 PROV3279;Mak'simiakert;;;;;;;;;;;;;
 PROV3281;Wschowa;;;;;;;;;;;;;
 PROV3282;Muraszombat;;;;;;;;;;;;;
-PROV3283;Baranja;;;;;;;;;;;;;
+PROV3283;Baranya;;;;;;;;;;;;;
 PROV3284;Tehuantepec;;;;;;;;;;;;;
 PROV3285;Újpiaszc;;;;;;;;;;;;;
 PROV3287;Baldolzu;;;;;;;;;;;;;
 PROV3288;Tarvis;;;;;;;;;;;;;
-PROV3289;Cakovec;;;;;;;;;;;;;
+PROV3289;Csáktornya;;;;;;;;;;;;;
 PROV3280;Edmundston;;;;;;;;;;;;;
 PROV3292;Al Salman;;;;;;;;;;;;;
 PROV3290;Bosilegrad;;;;;;;;;;;;;
@@ -334,8 +418,8 @@ PROV1017;Oryol;;;;;;;;;;;;;
 PROV1008;Moskva;;;;;;;;;;;;;
 PROV372;København;;;;;;;;;;;;;
 PROV809;Sofiya;;;;;;;;;;;;;
-PROV618;Siránkogázs;;;;;;;;;;;;
-PROV619;Kunságvár;;;;;;;;;;;;;
+PROV618;Vallanemrosa;;;;;;;;;;;;
+PROV619;Bécs;;;;;;;;;;;;;
 PROV620;Bélavár;;;;;;;;;;;;
 PROV621;Szentszék;;;;;;;;;;;;
 RUS_958;Kyiv;;;;;;;;;;;;;
@@ -358,7 +442,7 @@ PROV728;Brèssa;;;;;;;;;;;;
 PROV730;Veròna;;;;;;;;;;;;
 PROV732;Trevixo;;;;;;;;;;;;
 PROV736;Tergeste;;;;;;;;;;;;
-PROV737;Gorizia;;;;;;;;;;;;
+PROV737;Accilenia;;;;;;;;;;;;
 PROV738;Parma;;;;;;;;;;;;
 PROV739;Modena;;;;;;;;;;;;
 PROV740;Massa;;;;;;;;;;;;
@@ -437,7 +521,7 @@ PROV49;Rat Portage;;;;;;;;;;;;;
 PROV52;Orillia;;;;;;;;;;;;;
 PROV75;Port-Aux-Basques;;;;;;;;;;;;;
 PROV69;Petit-Sault;;;;;;;;;;;;;
-PROV683;Waldenburg;;;;;;;;;;;;;
+PROV683;Walbrzych;;;;;;;;;;;;;
 PROV43;Clarksville;;;;;;;;;;;;;
 PROV134;Fort Parker;;;;;;;;;;;;;
 PROV135;Llano Estacado;;;;;;;;;;;;;
@@ -659,6 +743,7 @@ RUS_1003;Sur' Uz'lidn;;;;;;;;;;;;
 PROV1377;Da Nang;;;;;;;;;;;;;
 PROV1714;Santa Rosa;;;;;;;;;;;;;
 PROV2631;Unalakleet;;;;;;;;;;;;;
+PROV631;Berén;;;;;;;;;;;;;
 PROV1780;Debar;;;;;;;;;;;;;
 PROV2371;Uquia;;;;;;;;;;;;;
 PROV2953;New York Bight;;;;;;;;;;;;;
@@ -794,7 +879,7 @@ PROV1391;Kota Kubang Labu;;;;;;;;;;;;;
 PROV1382;Hà Tiên;;;;;;;;;;;;;
 RUS_1048;Circassia;;;;;;;;;;;;;
 PROV1049;Ubykhia;;;;;;;;;;;;;
-PROV689;Tesin;;;;;;;;;;;;;
+PROV689;Tessény;;;;;;;;;;;;;
 PROV1773;Zawerat;;;;;;;;;;;;;
 PROV1178;Sana'a;;;;;;;;;;;;;
 PROV972;Yekaterinoslav;;;;;;;;;;;;;
@@ -880,20 +965,55 @@ MOL_676;Bessarabia;;;;;;;;;;;;;
 PRU_682;Schlesien;;;;;;;;;;;;;
 AUS_702;Galicia-Lodomeria;;;;;;;;;;;;;
 PROV616;Kiskasta;Kiskasta;Kiskasta;;Kiskasta;;;;;;;;
-PROV662;Csernovic;;;;;;;;;;;;;
+PROV662;Újerderod;;;;;;;;;;;;;
 PROV663;Szucsvár;;;;;;;;;;;;;
 PROV665;Zsilvásárhely;;;;;;;;;;;;;
 PROV666;Királyivár;;;;;;;;;;;;;
 PROV704;Újszandec;;;;;;;;;;;;;
-PROV705;Premeszlek;;;;;;;;;;;;;
 PROV714;Tövisvár;;;;;;;;;;;;;
 PROV774;Zengg;;;;;;;;;;;;;
 PROV778;Folyum;;;;;;;;;;;;;
-PROV784;Bihács;;;;;;;;;;;;;
+PROV784;Máriavár;;;;;;;;;;;;;
 PROV955;Köveshely;;;;;;;;;;;;;
 RUS_706;Masovia;;;;;;;;;;;;;
 PROV711;Siedlce;;;;;;;;;;;;;
 RUS_715;West Galicia;;;;;;;;;;;;;
+PROV662;Cernauti;;;;;;;;;;;;
+PROV663;Suceava;;;;;;;;;;;;
+PROV664;Bukuria;;;;;;;;;;;;
+PROV665;Tirgu Jiu;;;;;;;;;;;;
+PROV666;Craiova;;;;;;;;;;;;
+PROV667;Targovica;;;;;;;;;;;;
+PROV668;Braleva;;;;;;;;;;;;
+PROV669;Liceresta;;;;;;;;;;;;
+PROV670;Iasitarga;;;;;;;;;;;;
+PROV671;Delavani;;;;;;;;;;;;
+PROV672;Bakova;;;;;;;;;;;;
+PROV676;Kisenova;;;;;;;;;;;;
+PROV678;Lukovisji;;;;;;;;;;;;
+PROV679;Kolberg;;;;;;;;;;;;
+PROV680;K?lin;;;;;;;;;;;;
+PROV681;K?trin;;;;;;;;;;;;
+PROV682;Wroclaw;;;;;;;;;;;;
+PROV684;Opole;;;;;;;;;;;;
+PROV685;Kattowitz;;;;;;;;;;;;
+PROV687;G?litz;;;;;;;;;;;;
+PROV690;Danzig;;;;;;;;;;;;
+PROV691;Tuchel;;;;;;;;;;;;
+PROV692;Deutsch Krone;;;;;;;;;;;;
+PROV699;Poznan;;;;;;;;;;;;
+PROV700;Bydgoszcz;;;;;;;;;;;;
+PROV703;Álmosvár;;;;;;;;;;;;
+PROV705;Határváros;;;;;;;;;;;;
+PROV706;Warsaw;;;;;;;;;;;;
+PROV709;Lomza;;;;;;;;;;;;
+PROV710;Skierniewice;;;;;;;;;;;;
+PROV712;Fuzfafehérvár;;;;;;;;;;;;
+PROV713;Régitelepülés;;;;;;;;;;;;
+PROV714;Tarnow;;;;;;;;;;;;
+PROV715;Magasdomberod;;;;;;;;;;;;
+PROV716;Sarjadóföld;;;;;;;;;;;;
+PROV717;Kalisz;;;;;;;;;;;;
 PROV719;Bialystok;;;;;;;;;;;;;
 PROV748;Grosseto;;;;;;;;;;;;;
 SAR_765;Sardinia & Corsica;;;;;;;;;;;;;
@@ -967,7 +1087,7 @@ PROV1420;Muuttilinenjõglinn;;;;;;;;;;;;;
 PROV1421;Vaike Turüsaare;;;;;;;;;;;;;
 PROV1422;Siseskülalut;;;;;;;;;;;;;
 PROV1423;Soolajõelinn;;;;;;;;;;;;;
-PROV1424;Kis Magyarváros;;;;;;;;;;;;;
+PROV1424;Azúrotája;;;;;;;;;;;;;
 PROV1425;Jühlapaikka;;;;;;;;;;;;;
 PROV1427;Sürpühasait;;;;;;;;;;;;;
 PROV1429;Sesumuhosu;;;;;;;;;;;;;
@@ -1237,9 +1357,18 @@ PROV79;Fort Vancouver;;;;;;;;;;;;;
 PROV18;Dawson's Creek;;;;;;;;;;;;;
 PROV129;Guymon;;;;;;;;;;;;;
 PROV128;Hugoton;;;;;;;;;;;;;
-PROV638;Prešov;;;;;;;;;;;;;
+PROV629;Pilsen;;;;;;;;;;;;;
+PROV630;Budweis;;;;;;;;;;;;;
+PROV637;Kassa;;;;;;;;;;;;;
+PROV638;Eperjes;;;;;;;;;;;;;
+PROV657;Segesvár;;;;;;;;;;;;;
 AUS_625;Bohemia-Moravia;;;;;;;;;;;;;
+PROV625;Kladen;;;;;;;;;;;;
 AUS_626;Sudetenland;;;;;;;;;;;;;
+PROV626;Hradec Králové;;;;;;;;;;;;;
+PROV628;Liberec;;;;;;;;;;;;;
+PROV632;Olomuniec;;;;;;;;;;;;;
+PROV688;Opawa;;;;;;;;;;;;
 PROV84;Sacramento;;;;;;;;;;;;;
 PROV86;Truckee;;;;;;;;;;;;;
 PROV98;Cedar City;;;;;;;;;;;;;
@@ -1294,11 +1423,72 @@ south_west_africa;South-West Africa;;;;;;;;;;;;;
 central_africa;Equatorial Africa;;;;;;;;;;;;;
 indochina;Indochina;;;;;;;;;;;;;
 equatorial_africa;Equatorial Africa;;;;;;;;;;;;;
-PROV599;München;;;;;;;;;;;;;
+PROV599;Minga;;;;;;;;;;;;;
 PROV595;Nürnberg;;;;;;;;;;;;;
 PROV575;Köln;;;;;;;;;;;;;
 PROV577;Kleev;;;;;;;;;;;;;
 PROV536;Braunschweig;;;;;;;;;;;;;
+PROV529;Lauenburg;Lauenburg;Lauenburg;;Lauenburg;;;;;;;;
+PROV530;L?eck;L?eck;L?eck;;L?eck;;;;;;;;
+PROV532;L?eburg;Lunebourg;L?eburg;;Luneburg;;;;;;;;
+PROV535;Nienburg;Nienburg;Nienburg;;Nienburg;;;;;;;;
+PROV537;G?tingen;G?tingen;G?tingen;;Gottingen;;;;;;;;
+PROV538;Osnabr?k;Osnabr?k;Osnabr?k;;Osnabruck;;;;;;;;
+PROV539;Bremen;Br?e;Bremen;;Bremen;;;;;;;;
+PROV541;Cloppenburg;Cloppenburg;Cloppenburg;;Cloppenburg;;;;;;;;
+PROV542;Lingen;Lingen;Lingen;;Lingen;;;;;;;;
+PROV544;Schwerin;Schwerin;Schwerin;;Schwerin;;;;;;;;
+PROV545;Neustrelitz;Neustrelitz;Neustrelitz;;Neustrelitz;;;;;;;;
+PROV546;Stettin;Stettin;Stettin;;Stettin;;;;;;;;
+PROV548;Stralsund;Stralsund;Stralsund;;Stralsund;;;;;;;;
+PROV549;Berlin;Berlin;Berlin;;Berl?;;;;;;;;
+PROV550;Prenzlau;Prenzlau;Prenzlau;;Prenzlau;;;;;;;;
+PROV551;Pritzwalk;Pritzwalk;Pritzwalk;;Pritzwalk;;;;;;;;
+PROV552;Cottbus;Cottbus;Cottbus;;Cottbus;;;;;;;;
+PROV553;Magdeburg;Magdebourg;Magdeburg;;Magdeburgo;;;;;;;;
+PROV554;Erfurt;Erfurt;Erfurt;;Erfurt;;;;;;;;
+PROV555;Dessau;Dessau;Dessau;;Dessau;;;;;;;;
+PROV556;Halle;Halle;Halle;;Halle;;;;;;;;
+PROV557;Stendal;Stendal;Stendal;;Stendal;;;;;;;;
+PROV558;Dresden;Dresde;Dresden;;Dresde;;;;;;;;
+PROV559;Leipzig;Leipzig;Leipzig;;Leipzig;;;;;;;;
+PROV560;Chemnitz;Chemnitz;Chemnitz;;Chemnitz;;;;;;;;
+PROV561;Weimar;Weimar;Weimar;;Weimar;;;;;;;;
+PROV562;Gotha;Gotha;Gotha;;Gotha;;;;;;;;
+PROV563;Meiningen;Meiningen;Meiningen;;Meiningen;;;;;;;;
+PROV564;Frankfurt;Francfort;Frankfurt;;Frankfurt;;;;;;;;
+PROV565;Wiesbaden;Wiesbaden;Wiesbaden;;Wiesbaden;;;;;;;;
+PROV566;Kassel;Kassel;Kassel;;Kassel;;;;;;;;
+PROV568;Fulda;Fulda;Fulda;;Fulda;;;;;;;;
+PROV569;Mannheim;Mannheim;Mannheim;;Mannheim;;;;;;;;
+PROV570;Mainz;Mainz;Mainz;;Mainz;;;;;;;;
+PROV571;Kaiserslautern;Kaiserslautern;Kaiserslautern;;Kaiserslautern;;;;;;;;
+PROV572;Trier;Tr?es;Trier;;Tr?eris;;;;;;;;
+PROV573;Saarbr?ken;Sarrebruck;Saarbr?ken;;Saarbrucken;;;;;;;;
+PROV576;Aachen;Aix-la-Chapelle;Aachen;;Aquisgr?;;;;;;;;
+PROV578;D?seldorf;D?seldorf;D?seldorf;;Dusseldorf;;;;;;;;
+PROV580;Dortmund;Dortmund;Dortmund;;Dortmund;;;;;;;;
+PROV581;M?ster;M?ster;M?ster;;M?ster;;;;;;;;
+PROV582;Minden;Minden;Minden;;Minden;;;;;;;;
+PROV583;Siegen;Siegen;Siegen;;Siegen;;;;;;;;
+PROV584;Korbach;Korbach;Korbach;;Korbach;;;;;;;;
+PROV585;Detmold;Detmold;Detmold;;Detmold;;;;;;;;
+PROV586;Karlsruhe;Karlsruhe;Karlsruhe;;Karlsruhe;;;;;;;;
+PROV587;Freiburg;Fribourg;Freiburg;;Friburgo;;;;;;;;
+PROV588;Konstanz;Constance;Konstanz;;Constanza;;;;;;;;
+PROV589;Stuttgart;Stuttgart;Stuttgart;;Stuttgart;;;;;;;;
+PROV590;Heilbronn;Heilbronn;Heilbronn;;Heilbronn;;;;;;;;
+PROV591;T?ingen;Tubingue;T?ingen;;Tubingen;;;;;;;;
+PROV592;Augsburg;Augsbourg;Augsburg;;Augsburgo;;;;;;;;
+PROV593;Ulem;;;;;;;;;;;;
+PROV594;Sigmaringen;;;;;;;;;;;;
+PROV596;Aschaffenburg;;;;;;;;;;;;
+PROV597;W?zburg;;;;;;;;;;;;
+PROV598;Bareid;;;;;;;;;;;;
+PROV600;Landsad;;;;;;;;;;;;
+PROV601;Inglstod;;;;;;;;;;;;
+PROV602;Rengschburg;;;;;;;;;;;;
+PROV604;Basel;;;;;;;;;;;;
 PROV399;Risjel;;;;;;;;;;;;
 PROV400;Dúntsjerke;;;;;;;;;;;;;
 PROV534;Hannover;;;;;;;;;;;;;
@@ -1350,16 +1540,16 @@ PROV3560;Nara;;;;;;;;;;;;;
 PROV3561;Rét;;;;;;;;;;;;;
 PROV3562;Otena;;;;;;;;;;;;;
 PROV3563;Balteva;;;;;;;;;;;;;
-PROV3564;Jaszbereny;;;;;;;;;;;;;
-PROV3565;Jaszapati;;;;;;;;;;;;;
-PROV3566;Jaszvar;;;;;;;;;;;;;
+PROV3564;Jászberény;;;;;;;;;;;;;
+PROV3565;Jászapáti;;;;;;;;;;;;;
+PROV3566;Jászvár;;;;;;;;;;;;;
 PROV3567;Arad;;;;;;;;;;;;;
-PROV3568;Cres-Krk-Rab;;;;;;;;;;;;;
+PROV3568;Feketszigetek;;;;;;;;;;;;;
 PROV3569;Dráva;;;;;;;;;;;;;
-PROV3570;Lucfenykuny;;;;;;;;;;;;;
-PROV3571;Jasztrebarszka;;;;;;;;;;;;;
-PROV3572;Kovaros;;;;;;;;;;;;;
-PROV3573;Sibenik;;;;;;;;;;;;;
+PROV3570;Novacastra;;;;;;;;;;;;;
+PROV3571;Jásztávolivár;;;;;;;;;;;;;
+PROV3572;Szuzmáriavár;;;;;;;;;;;;;
+PROV3573;Néapromachión;;;;;;;;;;;;;
 PROV3574;Kotyaion;;;;;;;;;;;;;
 PROV3575;Egdava;;;;;;;;;;;;;
 PROV3576;Garsaura;;;;;;;;;;;;;
@@ -1377,7 +1567,7 @@ PROV3587;South Aegean;;;;;;;;;;;;;
 PROV3588;Khios;;;;;;;;;;;;;
 PROV3589;Sporadhes;;;;;;;;;;;;;
 PROV3590;Lesbos;;;;;;;;;;;;;
-PROV3591;Daesitia;;;;;;;;;;;;;
+PROV3591;Katábory;;;;;;;;;;;;;
 PROV3592;Chork Marzban;;;;;;;;;;;;;
 PROV3593;Tigranik'ag;;;;;;;;;;;;;
 PROV3594;Tarson;;;;;;;;;;;;;
@@ -1421,7 +1611,7 @@ PROV3631;Inis;;;;;;;;;;;;;
 PROV3632;Taonach;;;;;;;;;;;;;
 PROV3633;Ansbach;;;;;;;;;;;;;
 PROV3634;Ros Cre;;;;;;;;;;;;;
-PROV3635;Rosenheim;;;;;;;;;;;;;
+PROV3635;Roasnham;;;;;;;;;;;;;
 PROV3636;Syväkallolinna;;;;;;;;;;;;;
 PROV3637;Mhantain;;;;;;;;;;;;;
 PROV3638;Kolmejõelinn;;;;;;;;;;;;;
@@ -1430,12 +1620,12 @@ PROV3640;Polondava;;;;;;;;;;;;;
 PROV3641;Athaluain;;;;;;;;;;;;;
 PROV3642;Sucidava;;;;;;;;;;;;;
 PROV3643;Uaimh;;;;;;;;;;;;;
-PROV3644;Ramnic;;;;;;;;;;;;;
+PROV3644;Erodátkelohely;;;;;;;;;;;;;
 PROV3645;Flevolân;;;;;;;;;;;;;
 PROV3646;Wittingau;;;;;;;;;;;;;
 PROV3647;Kelheim;;;;;;;;;;;;;
 PROV3648;Logu de Patze;;;;;;;;;;;;;
-PROV3649;Rothenburg;;;;;;;;;;;;;
+PROV3649;Rooteborg;;;;;;;;;;;;;
 PROV3650;Toul;;;;;;;;;;;;;
 PROV3651;Speyer;;;;;;;;;;;;;
 PROV3652;Ath Long;;;;;;;;;;;;;
@@ -1454,12 +1644,12 @@ PROV3664;Kempten;;;;;;;;;;;;;
 PROV3665;Schaffhausen;;;;;;;;;;;;;
 PROV3666;Cuil Rathain;;;;;;;;;;;;;
 PROV3667;Neuburg;;;;;;;;;;;;;
-PROV3668;Spis;;;;;;;;;;;;;
-PROV3669;Zahorie;;;;;;;;;;;;;
-PROV3670;Trnava;;;;;;;;;;;;;
-PROV3671;Pod Dunajsko;;;;;;;;;;;;;
-PROV3672;Novohrad;;;;;;;;;;;;;
-PROV3673;Banska Bystrica;;;;;;;;;;;;;
+PROV3668;Szepes;;;;;;;;;;;;;
+PROV3669;Erdohát;;;;;;;;;;;;;
+PROV3670;Surendranagar;;;;;;;;;;;;;
+PROV3671;Szerdahely;;;;;;;;;;;;;
+PROV3672;Újkastély;;;;;;;;;;;;;
+PROV3673;Amreli;;;;;;;;;;;;;
 PROV3674;Orayvi;;;;;;;;;;;;;
 PROV3675;Hawikuh;;;;;;;;;;;;;
 PROV3676;Acoma;;;;;;;;;;;;;
@@ -1565,3 +1755,5 @@ PROV3775;Sancerre;;;;;;;;;;;;;
 PROV3776;Mâcon;;;;;;;;;;;;;
 PROV3777;Semur;;;;;;;;;;;;;
 PROV3778;Nevers;;;;;;;;;;;;;
+PROV3779;Kuumavelinn;;;;;;;;;;;;;
+PROV3780;Kaksrantaa;;;;;;;;;;;;;
