--- a/KOS/localisation/text.csv
+++ b/KOS/localisation/text.csv
@@ -9938,37 +9938,37 @@ PROV2275;Angostura;Angostura;Angostura;;Angostura;;;;;;;;
 PROV2276;Curiapo;Curiapo;Curiapo;;Curiapo;;;;;;;;
 PROV2277;El Jobal;El Jobal;El Jobal;;El Jobal;;;;;;;;
 PROV2278;San Fernando de Atabapo;San Fernando de Atabapo;San Fernando de Atabapo;;San Fernando de Atabapo;;;;;;;;
-PROV2279;Quito;Quito;Quito;;Quito;;;;;;;;
-PROV2280;Guayaquil;Guayaquil;Guayaquil;;Guayaquil;;;;;;;;
-PROV2282;Loja;Loja;Loja;;Loja;;;;;;;;
-PROV2283;Zamora;Zamora;Zamora;;Zamora;;;;;;;;
+PROV2279;Kitu;;;;;;;;;;;;
+PROV2280;Wankavilka;;;;;;;;;;;;
+PROV2282;Kañari;;;;;;;;;;;;
+PROV2283;Puruha;;;;;;;;;;;;
 PROV2284;Tena;Tena;Tena;;Tena;;;;;;;;
 PROV2285;Galápagos;Galapagos;Galapagos;;Galápagos;;;;;;;;
 PROV2286;Iquitos;Iquitos;Iquitos;;Iquitos;;;;;;;;
-PROV2287;Yurimaguas;Yurimaguas;Yurimaguas;;Yurimaguas;;;;;;;;
+PROV2287;Chachapuya;;;;;;;;;;;;
 PROV2288;Yuncos;Yuncos;Yuncos;;Yuncos;;;;;;;;
 PROV2289;Puca Urco;Puca Urco;Puca Urco;;Puca Urco;;;;;;;;
-PROV2290;Cajamarca;Cajamarca;Cajamarca;;Cajamarca;;;;;;;;
-PROV2291;Piura;Piura;Piura;;Piura;;;;;;;;
-PROV2292;Trujillo;Trujillo;Trujillo;;Trujillo;;;;;;;;
-PROV2293;Huánuco;Huanuco;Huanuco;;Huanuco;;;;;;;;
-PROV2294;Moyobamba;Moyobamba;Moyobamba;;Moyobamba;;;;;;;;
-PROV2295;Lima;Lima;Lima;;Lima;;;;;;;;
-PROV2296;Huancavelica;Huancavelica;Huancavelica;;Huancavelica;;;;;;;;
-PROV2297;Ica;Ica;Ica;;Ica;;;;;;;;
-PROV2298;Huaraz;Huaraz;Huaraz;;Huaraz;;;;;;;;
-PROV2299;Ayacucho;Ayacucho;Ayacucho;;Ayacucho (PER);;;;;;;;
+PROV2290;Kashamarka;;;;;;;;;;;;
+PROV2291;Tumpis;;;;;;;;;;;;
+PROV2292;Chan-Chan;;;;;;;;;;;;
+PROV2293;Wanuku;;;;;;;;;;;;
+PROV2294;Wankapampa;;;;;;;;;;;;
+PROV2295;Pachakamaq;;;;;;;;;;;;
+PROV2296;Wanka;;;;;;;;;;;;
+PROV2297;Chincha;;;;;;;;;;;;
+PROV2298;Warmiy;;;;;;;;;;;;
+PROV2299;Uripa;;;;;;;;;;;;
 PROV2300;Pucallpa;Pucallpa;Pucallpa;;Pucallpa;;;;;;;;
 PROV2301;Puerto Maldonado;Puerto Maldonado;Puerto Maldonado;;Puerto Maldonado;;;;;;;;
-PROV2302;Cusco;Cusco;Cusco;;Cusco;;;;;;;;
-PROV2303;Puno;Puno;Puno;;Puno;;;;;;;;
-PROV2304;Arequipa;Arequipa;Arequipa;;Arequipa;;;;;;;;
+PROV2302;Qusqu;;;;;;;;;;;;
+PROV2303;Hatunqulla;;;;;;;;;;;;
+PROV2304;Qillqa;;;;;;;;;;;;
 PROV2305;Antofagasta;Antofagasta;Antofagasta;;Antofagasta;;;;;;;;
 PROV2306;Sorocaba;Sorocaba;Sorocaba;;Sorocaba;;;;;;;;
 PROV2307;Iquique;Iquique;Iquique;;Iquique;;;;;;;;
 PROV2308;Arica;Arica;Arica;;Arica;;;;;;;;
 PROV2309;Calama;Calama;Calama;;Calama;;;;;;;;
-PROV2310;La Paz;La Paz;La Paz;;La Paz;;;;;;;;
+PROV2310;Axawiri;;;;;;;;;;;;
 PROV2311;Cochabamba;Cochabamba;Cochabamba;;Cochabamba;;;;;;;;
 PROV2312;Oruro;Oruro;Oruro;;Oruro;;;;;;;;
 PROV2313;Chuquisaca;Chuquisaca;Chuquisaca;;Chuquisaca;;;;;;;;
@@ -10157,7 +10157,7 @@ PROV2573;Mboul;Mboul;Mboul;;Mboul;;;;;;;;
 PROV2574;Mochudi;Mochudi;Mochudi;;Mochudi;;;;;;;;
 PROV2575;Ipoh;Ipoh;Ipoh;;Ipoh;;;;;;;;
 PROV2576;Natuna;Natuna;Natuna;;Natuna;;;;;;;;
-PROV2578;Tacna;Tacna;Tacna;;Tacna;;;;;;;;
+PROV2578;Muqiwa;;;;;;;;;;;;
 PROV2579;Chuuk;;;;;;;;;;;;
 PROV2588;Onega;Onega;Onega;;Onega;;;;;;;;
 PROV2592;Ungava;Ungava;Ungava;;Ungava;;;;;;;;
