--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -400,7 +400,7 @@ KML_radical;Kumul Libertarians;;;;;;;;;;;;;
 KML_socialist;Kumul Socialists;;;;;;;;;;;;;
 KML_communist;Kumul People's Party;;;;;;;;;;;;;
 KML_fascist;Kumul National Front;;;;;;;;;;;;;
-PROV2281;Esmeraldas;;;;;;;;;;;;;
+PROV2281;Manta;;;;;;;;;;;;;
 PROV1363;Pakse;;;;;;;;;;;;;
 PROV1364;Phnom Penh;;;;;;;;;;;;;
 ATJ;Aceh;;;;;;;;;;;;;
