--- a/KOS/localisation/00000kermit.csv
+++ b/KOS/localisation/00000kermit.csv
@@ -9,3 +9,13 @@ PROV3792;Palmitupamba;;;;;;;;;;;;;
 PROV3793;Guapondelig;;;;;;;;;;;;;
 PROV3794;Pelusis;;;;;;;;;;;;;
 PROV3795;Machala;;;;;;;;;;;;;
+PROV3796;Mutupi;;;;;;;;;;;;;
+PROV3797;Wampu;;;;;;;;;;;;;
+PROV3798;Pakatnamu;;;;;;;;;;;;;
+PROV3799;Manchan;;;;;;;;;;;;;
+PROV3800;Waylas;;;;;;;;;;;;;
+PROV3801;Paramunqa;;;;;;;;;;;;;
+PROV3802;Chankay;;;;;;;;;;;;;
+PROV3803;Ichma;;;;;;;;;;;;;
+PROV3804;Yawyu;;;;;;;;;;;;;
+PROV3805;Qahatanpu;;;;;;;;;;;;;
