--- a/KOS/localisation/00000kermit.csv
+++ b/KOS/localisation/00000kermit.csv
@@ -19,3 +19,18 @@ PROV3802;Chankay;;;;;;;;;;;;;
 PROV3803;Ichma;;;;;;;;;;;;;
 PROV3804;Yawyu;;;;;;;;;;;;;
 PROV3805;Qahatanpu;;;;;;;;;;;;;
+PROV3806;Muyupampa;;;;;;;;;;;;;
+PROV3807;Yurimawas;;;;;;;;;;;;;
+PROV3808;Purum Llaqta;;;;;;;;;;;;;
+PROV3809;Wallaqasuyu;;;;;;;;;;;;;
+PROV3810;Waqrachuqu;;;;;;;;;;;;;
+PROV3811;Wamachuku;;;;;;;;;;;;;
+PROV3812;Rikuway;;;;;;;;;;;;;
+PROV3813;Conchucos;;;;;;;;;;;;;
+PROV3814;Tantamayu;;;;;;;;;;;;;
+PROV3815;Panatahuas;;;;;;;;;;;;;
+PROV3816;Wari-Willka;;;;;;;;;;;;;
+PROV3817;Pumpus;;;;;;;;;;;;;
+PROV3818;Tarmatampu;;;;;;;;;;;;;
+PROV3819;Amuesha;;;;;;;;;;;;;
+PROV3820;Shawsha;;;;;;;;;;;;;
