Huanuco, Huanca, Chincha and Charca

--- a/KOS/localisation/00000kermit.csv
+++ b/KOS/localisation/00000kermit.csv
@@ -1,5 +1,9 @@
 Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;Portuguese;Russian;Finnish;
+PROV2281;Manta;;;;;;;;;;;;;
 PROV2283;Puruha;;;;;;;;;;;;;
+PROV2299;Antawaylla;;;;;;;;;;;;;
+PROV2297;Chinchaykamak;;;;;;;;;;;;;
+PROV3382;Jonikos;;;;;;;;;;;;;
 PROV3787;Tallan;;;;;;;;;;;;;
 PROV3788;Palta;;;;;;;;;;;;;
 PROV3789;Puna;;;;;;;;;;;;;
@@ -29,8 +33,27 @@ PROV3812;Rikuway;;;;;;;;;;;;;
 PROV3813;Conchucos;;;;;;;;;;;;;
 PROV3814;Tantamayu;;;;;;;;;;;;;
 PROV3815;Panatahuas;;;;;;;;;;;;;
-PROV3816;Wari-Willka;;;;;;;;;;;;;
+PROV3816;Munupampa;;;;;;;;;;;;;
 PROV3817;Pumpus;;;;;;;;;;;;;
 PROV3818;Tarmatampu;;;;;;;;;;;;;
 PROV3819;Amuesha;;;;;;;;;;;;;
 PROV3820;Shawsha;;;;;;;;;;;;;
+PROV3821;Wari-Willka;;;;;;;;;;;;;
+PROV3822;Arwaturu;;;;;;;;;;;;;
+PROV3823;Pampas;;;;;;;;;;;;;
+PROV3824;Llaksapallanka;;;;;;;;;;;;;
+PROV3825;Iniysuyu;;;;;;;;;;;;;
+PROV3826;Unkara;;;;;;;;;;;;;
+PROV3827;Pisqu;;;;;;;;;;;;;
+PROV3828;Naska;;;;;;;;;;;;;
+PROV3829;Qarawili;;;;;;;;;;;;;
+PROV3830;Qanchi;;;;;;;;;;;;;
+PROV3831;Parkus;;;;;;;;;;;;;
+PROV3832;Willkas;;;;;;;;;;;;;
+PROV3833;Suras;;;;;;;;;;;;;
+PROV3834;Hanan Rukanas;;;;;;;;;;;;;
+PROV3835;Antamarka;;;;;;;;;;;;;
+PROV3836;Hurin Rukanas;;;;;;;;;;;;;
+PROV3837;Kuntisuyu;;;;;;;;;;;;;
+PROV3838;Kutapampa;;;;;;;;;;;;;
+PROV3839;Apurimaqsuyu;;;;;;;;;;;;;
