border changes and commit for pc switch

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -87,7 +87,7 @@ PROV3374;Dreinóspóli;;;;;;;;;;;;;
 PROV3373;Filibe;;;;;;;;;;;;;
 PROV3372;Shulinya;;;;;;;;;;;;;
 PROV3371;Panglikalya;;;;;;;;;;;;;
-PROV3370;Citalamentes;;;;;;;;;;;;;
+PROV3370;Gyepuföld;;;;;;;;;;;;;
 PROV3369;Firjuza;;;;;;;;;;;;;
 PROV3368;Jaanilidna;;;;;;;;;;;;;
 PROV3367;Petseri;;;;;;;;;;;;;
@@ -308,7 +308,7 @@ PROV3294;Verinkghzin;;;;;;;;;;;;;
 PROV1117;Sanandaj;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
 PROV673;Seliava;;;;;;;;;;;;;
-PROV3286;Szombathely;;;;;;;;;;;;;
+PROV3286;Heves;;;;;;;;;;;;;
 PROV2638;Zabul;;;;;;;;;;;;;
 PROV3258;Kech;;;;;;;;;;;;;
 PROV613;Soizbuag;;;;;;;;;;;;
@@ -316,7 +316,7 @@ PROV615;Lianz;;;;;;;;;;;;
 PROV617;Szerethely;;;;;;;;;;;;
 PROV622;Linz;;;;;;;;;;;;
 PROV623;Sopron;;;;;;;;;;;;
-PROV624;Kismarton;;;;;;;;;;;;
+PROV624;Vas;;;;;;;;;;;;
 PROV627;Karlsbad;;;;;;;;;;;;
 PROV639;Zalaegerszeg;;;;;;;;;;;;
 PROV640;Pécs;;;;;;;;;;;;
@@ -327,7 +327,7 @@ PROV645;Kunságvár;;;;;;;;;;;;
 PROV646;Miskolc;;;;;;;;;;;;
 PROV648;Debrecen;;;;;;;;;;;;
 PROV649;Szeged;;;;;;;;;;;;
-PROV650;Békéscsaba;;;;;;;;;;;;
+PROV650;Szolnok;;;;;;;;;;;;
 PROV653;Hidegfürdovár;;;;;;;;;;;;
 PROV1210;Faizabad;;;;;;;;;;;;;
 PROV8;Kuala Kelantan;;;;;;;;;;;;;
@@ -337,11 +337,11 @@ PROV770;Puola;;;;;;;;;;;;
 PROV771;Szepreg;;;;;;;;;;;;
 PROV773;Lajosvár;;;;;;;;;;;;
 PROV774;Lovagokvár;;;;;;;;;;;;
-PROV775;Varasd;;;;;;;;;;;;
-PROV776;Belovár;;;;;;;;;;;;
+PROV775;Csáktornya;;;;;;;;;;;;
+PROV776;Akardáltal;;;;;;;;;;;;
 PROV777;Völgyszíve;;;;;;;;;;;;
 PROV778;Tarsata;;;;;;;;;;;;
-PROV779;Mocsárvár;;;;;;;;;;;;
+PROV779;Baranya;;;;;;;;;;;;
 PROV780;Spálathos;;;;;;;;;;;;
 PROV781;Idassa;;;;;;;;;;;;
 PROV782;Epídavros;;;;;;;;;;;;
@@ -367,7 +367,7 @@ PROV802;Oulpiána;;;;;;;;;;;;
 PROV803;Prizreni;;;;;;;;;;;;
 PROV804;Treguiri;;;;;;;;;;;;
 PROV633;Pozsony;;;;;;;;;;;;;
-PROV634;Trencsén;;;;;;;;;;;;;
+PROV634;Erdohát;;;;;;;;;;;;;
 PROV635;Élyegety;;;;;;;;;;;;;
 PROV636;Kiválasztvár;;;;;;;;;;;;;
 PROV647;Nagyvárad;;;;;;;;;;;;;
@@ -382,7 +382,7 @@ PROV661;Árpádvár;;;;;;;;;;;;;
 PROV701;Gniezno;;;;;;;;;;;;;
 PROV767;Celeina;;;;;;;;;;;;;
 PROV768;Labacia;;;;;;;;;;;;;
-PROV772;Sziszek;;;;;;;;;;;;;
+PROV772;Agyozelhely;;;;;;;;;;;;;
 PROV792;Mélymocsarak;;;;;;;;;;;;;
 PROV951;Folyóvár;;;;;;;;;;;;;
 PROV953;Varjakvár;;;;;;;;;;;;;
@@ -403,13 +403,13 @@ PROV3276;Látogatóld;;;;;;;;;;;;;
 PROV3277;Hlucin;;;;;;;;;;;;;
 PROV3278;Manifa;;;;;;;;;;;;;
 PROV3281;Wschowa;;;;;;;;;;;;;
-PROV3282;Muraszombat;;;;;;;;;;;;;
-PROV3283;Baranya;;;;;;;;;;;;;
+PROV3282;Szombathely;;;;;;;;;;;;;
+PROV3283;Nemesfehérvár;;;;;;;;;;;;;
 PROV3284;Tehuantepec;;;;;;;;;;;;;
-PROV3285;Újpiaszc;;;;;;;;;;;;;
+PROV3285;Nyíregyháza;;;;;;;;;;;;;
 PROV3287;Baldolzu;;;;;;;;;;;;;
 PROV3288;Tarvis;;;;;;;;;;;;;
-PROV3289;Csáktornya;;;;;;;;;;;;;
+PROV3289;Építenújra;;;;;;;;;;;;;
 PROV3280;Edmundston;;;;;;;;;;;;;
 PROV3290;Bosilegrad;;;;;;;;;;;;;
 PROV3291;Strumica;;;;;;;;;;;;;
@@ -1593,11 +1593,11 @@ PROV3564;Jászberény;;;;;;;;;;;;;
 PROV3565;Jászapáti;;;;;;;;;;;;;
 PROV3566;Jászvár;;;;;;;;;;;;;
 PROV3567;Arad;;;;;;;;;;;;;
-PROV3568;Feketszigetek;;;;;;;;;;;;;
-PROV3569;Dráva;;;;;;;;;;;;;
+PROV3568;Magyarahágy;;;;;;;;;;;;;
+PROV3569;Nagyegyed;;;;;;;;;;;;;
 PROV3570;Novacastra;;;;;;;;;;;;;
 PROV3571;Jásztávolivár;;;;;;;;;;;;;
-PROV3572;Szuzmáriavár;;;;;;;;;;;;;
+PROV3572;Éghetelvár;;;;;;;;;;;;;
 PROV3573;Néapromachión;;;;;;;;;;;;;
 PROV3574;Kotyaion;;;;;;;;;;;;;
 PROV3575;Egdava;;;;;;;;;;;;;
@@ -1694,9 +1694,9 @@ PROV3665;Hàwenàu;;;;;;;;;;;;;
 PROV3666;Cuil Rathain;;;;;;;;;;;;;
 PROV3667;Nöiburg;;;;;;;;;;;;;
 PROV3668;Szepes;;;;;;;;;;;;;
-PROV3669;Erdohát;;;;;;;;;;;;;
+PROV3669;Hegyazavág;;;;;;;;;;;;;
 PROV3670;Surendranagar;;;;;;;;;;;;;
-PROV3671;Szerdahely;;;;;;;;;;;;;
+PROV3671;Újkastély;;;;;;;;;;;;;
 PROV3672;Újkastély;;;;;;;;;;;;;
 PROV3673;Amreli;;;;;;;;;;;;;
 PROV3674;Orayvi;;;;;;;;;;;;;
