quick pc switch

--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1346,7 +1346,7 @@ PROV2124;Maore;;;;;;;;;;;;;
 PROV220;Annapolis;;;;;;;;;;;;;
 PROV2745;Gulf of Se Gadira;;;;;;;;;;;;;
 PROV2744;Lusitanian Sea;;;;;;;;;;;;
-PROV2746;Pilastriu d'Eracle;;;;;;;;;;;;
+PROV2746;Pilastrius d’Eracle;;;;;;;;;;;;
 PROV2747;Gulf of Orci;;;;;;;;;;;;
 PROV2748;Gulf of Valentzia;;;;;;;;;;;
 PROV2749;Gulf of Leon;;;;;;;;;;;
@@ -1354,7 +1354,15 @@ PROV2923;Nawaksut Coast;;;;;;;;;;;;
 PROV2924;Cani Sea;;;;;;;;;;;;
 PROV2925;Coast of Muretannia;;;;;;;;;;;;
 PROV3020;Sea of Asures;;;;;;;;;;;;
-POR_521;Lusitania;;;;;;;;;;;;
+SPA_484;Extremadura;;;;;;;;;;;;
+SPA_487;Toletzia;;;;;;;;;;;;
+SPA_503;Cartaginnia;;;;;;;;;;;;
+SPA_512;Ispaddia;;;;;;;;;;;;
+SPA_513;Gadiria;;;;;;;;;;;;
+POR_518;Douro;;;;;;;;;;;;
+POR_521;Ulissia;;;;;;;;;;;;
+POR_525;Lusitannia;;;;;;;;;;;;
+POR_2134;Macaronesia;;;;;;;;;;;;
 PROV3;Fort Nikolaevskaia;;;;;;;;;;;;;
 PROV4;Nikolaevsk;;;;;;;;;;;;;
 PROV5;Kad'yak;;;;;;;;;;;;;
