--- a/KOS/localisation/ooselid_countries.csv
+++ b/KOS/localisation/ooselid_countries.csv
@@ -25,7 +25,8 @@ KHU_ADJ;Khoshuud;x;;;;
 TLD;Toletu;x;;;;
 TLD_ADJ;Toletuan;x;;;;
 SEV;Ispannia;x;;;;
-SEV_ADJ;Ispannian;x;;;;
+SEV_absolute_monarchy;Rennu Ispanniscu;x;;;;
+SEV_ADJ;Ispanniscan;x;;;;
 CTG;Cartaginnia;x;;;;
 CTG_ADJ;Cartaginnian;x;;;;
 GTL;Gothalaunia;x;;;;
@@ -532,7 +533,7 @@ ANJ_ADJ;Angevin;;;;;;;;;;;;;
 ANJ_imperial_duchy;Duché d'Anjou;;;;;;;;;;;;;
 GIS;Guise;;;;;;;;;;;;;
 GIS_ADJ;Guisard;;;;;;;;;;;;;
-GIS_imperial_duchy;Duché de Rethel;;;;;;;;;;;;;
+GIS_imperial_duchy;Duché de Guise;;;;;;;;;;;;;
 RET;Rethel;;;;;;;;;;;;;
 RET_ADJ;Rethélois;;;;;;;;;;;;;
 RET_imperial_county;Comté de Rethel;;;;;;;;;;;;;
@@ -690,7 +691,7 @@ high_germanic;High Germanic;x;;;;
 low_germanic;Low Germanic;x;;;;
 gothic_group;Gothic Group;x;;;;
 galetzian;Galetzian;x;;;;
-ispannu;Ispannu;x;;;;
+ispannu;Ispanniscu;x;;;;
 tarragones;Tarragonès;x;;;;
 cartaginesu;Cartaginesu;x;;;;
 aquitan;Aquitan;x;;;;
