added a few provs in arabia and egypt

--- a/KOS/localisation/00_HPM_countries.csv
+++ b/KOS/localisation/00_HPM_countries.csv
@@ -3091,7 +3091,7 @@ KUM_prussian_constitutionalism;The Shamkhalate;Tigray;Tigray;;Tigray;;;;;;;;;
 KUM_hms_government;The Shamkhalate;Tigray;Tigray;;Tigray;;;;;;;;;
 AVR;Avaristan;;;;;;;;;;;;;
 AVR_ADJ;Avar;;;;;;;;;;;;;
-COP;Khemet;;;;;;;;;;;;;
+COP;Meterronkhemi;;;;;;;;;;;;;
 COP_ADJ;Kaami;;;;;;;;;;;;;
 LEO;León;;;;;;;;;;;;;
 LEO_ADJ;Leonés;;;;;;;;;;;;;
