--- a/KOS/localisation/00_HPM_map.csv
+++ b/KOS/localisation/00_HPM_map.csv
@@ -1940,3 +1940,10 @@ PROV3941;Rudok;;;;;;;;;;;;;
 PROV3942;Aksai Chin;;;;;;;;;;;;;
 PROV3943;Yarkent;;;;;;;;;;;;;
 PROV3944;Sylhet;;;;;;;;;;;;;
+PROV3945;Bohón;;;;;;;;;;;;;
+PROV3946;Sesibi;;;;;;;;;;;;;
+PROV3947;Napátai;;;;;;;;;;;;;
+PROV3948;Óchipotámia;;;;;;;;;;;;;
+PROV3949;Najran;;;;;;;;;;;;;
+PROV3950;AlHait;;;;;;;;;;;;;
+PROV3951;Hafar al-Batin;;;;;;;;;;;;;
